1999-09-08  Dan Espen  <dane@mk.telcordia.com>

	* Moved fvwm-cats into fvwm-web.  Moved the cats changelog here too.

1999-04-15  Bob Woodside  <proteus@pcnet.com>
	* index.html: made the pets' names bold, minor update to my entry.

1999-04-15  Dominik Vogt  <dominik_vogt@hp.com>

	* fvwm-cats.html: renamed to index.html

1999-04-14  Dominik Vogt  <dominik_vogt@hp.com>

	* fvwm-cats.html: fixed typo

1999-09-01  Dominik Vogt  <dominik.vogt@gmx.de>

	* download.html: changed latest beta to 2.3.7

Sun Aug 22 19:08:51 1999  DanEspen  <dje@blue>

	* cvs.html: Start describing fvwm-web CVS proceedure.

1999-08-10  Dan Espen  <dane@mk.telcordia.com>

	* 2.2.2 manpages: added.

	* docs.html: Access man pages in generated/manpages directory.

	* generated/run_man2html.sh (curr_section): Add ../../ to reference to
	background jpg.  Default input is ../../fvwm, default output is
	./manpages.

	* index.html: access NEWS in "generated" directory.

	* generated/NEWS.html: Generated NEWS.html from current (2.3.6) source.

	* generated/FAQ.html: Generated FAQ.html from current (2.3.6) source.

	* generated/txt2html.sh: Add ../ to reference to background jpg.

	* docs.html: Remove link to the TODO list, access FAQ in "generated"
	directory.

	* cvs.html: Change reference to the TODO list to the
	Jitterbug list.

1999-08-09  Dan Espen  <dane@mk.telcordia.com>

	* screenshots/screenshot.html: News screenshot by Ives Aerts.

	* Added generated directory and the 2 generation shells.

	* Moved screenshots into a subdirectory,
	fixed bad filename for the Windowmaker thumbnail filename.

1999-08-08  Dominik Vogt  <dominik_vogt@gmx.de>

	* screenshot.html: added WindowMaker like screenshot

Thu Aug  5 15:51:58 1999  DanEspen  <dje@blue>

	* index.html,download.html: Make 2.2.2 the current release.

1999-08-05  Dominik Vogt  <domivogt@bvstp038.bbn.hp.com>

	* download.html: set latest beta to 2.3.6

Fri Jul  9 12:41:27 1999  DanEspen  <dje@blue>

	* links.html: Missed this one.
