@@ -120,5 +120,52 @@ see M_SENDCONFIG in
 and
 <A href="mod_m2f_communication.html">Module-to-Fvwm Communication</a>.
     <hr>
+<A name=colorsets><H2>Colorset support</H2></a>
+When a module requests configuration information the configuration commands sent
+are preceded by some global configuration lines and a list of colorsets. In
+order to use colorsets a module must do the following:
+
+<ul>
+<li>make sure <em>-lm</em> is contained in the LDADD variable in Makefile.am 
+<li><em>#include "libs/Colorset.h"</em>
+<li>Call InitPictureCMap() just after XOpenDisplay() to get access to the
+visuals that fvwm uses. Sharing pixmaps will not work unless you use the same
+colormap. This means that the module cannot create a top level window with
+XCreateSimpleWindow(). It must use XCreateWindow() and specify the visual as 
+<em>Pvisual</em>, the colormap as <em>Pcmap</em>, the depth as <em>Pdepth</em>,
+the background and border pixels must also be specified otherwise they default
+to <em>CopyFromParent</em> which may give an error.
+<li>Call AllocColorset(0) to initialize the colorset array.
+<li>Set the M_SENDCONFIG bit in the message mask
+<li>In the configuration parsing routine look for Colorset and pass the line to
+LoadColorset()
+<li>Add additional configuration commands such as *Fvwm&lt;module&gt;Colorset
+and parse for them. Colorsets usually duplicate static settings of foreground
+and background so you proabaly want a different colorset option for each
+background color option.
+<li>Add some state to select between using a colorset or a fore/background color
+for an object. The convention is that the last configuration command takes
+precedence.
+<li>The module must wait on select() not XNextEvent(). The select() must
+include the fvwm pipe so that messages from fvwm can be read. Any M_CONFIG_INFO
+message must be passed to the option parser so that a colorset message can be
+passed on to LoadColorset().  If a colorset that is referenced is changed the
+module must redraw itself.
+<li>Accessing colorset N must be done with via <em>Colorset[</em>N<em>&nbsp;%&nbsp;nColorsets]</em>. 
+Colorset[] and nColorsets are globals maintained libs/Colorset.c. The pixels
+available are
+<ul>
+<li>fg: the foreground pixel
+<li>bg: the background pixel
+<li>hilite: the top and left shadow pixel
+<li>relief: the bottom and right shadow pixel
+</ul>
+<li>SetWindowBackground() takes a colorset pointer and generates an appropriate
+background. It generates an expose event.
+<li>CreateBackgroundPixmap() creates the pixmap used by SetWindowBackground()
+in case you want to paint the background manually, you have to check
+that the colorset contains a pixmap first though (cset.pixmap != None).
+</ul>
+
   </body>
 </html>
