@@ -26,6 +26,7 @@
   <li><a href="mod_concept.html">Concept</a>
   <li><a href="mod_security.html">Security</a>
   <li><a href="mod_initialization.html">Initialization</a>
+      and <a href="mod_initialization.html#colorsets">Colorsets</a>
   <li><a href="mod_m2f_communication.html">Module-to-Fvwm Communication</a>
   <li><a href="mod_f2m_communication.html">Fvwm-to-Module Communication</a>
 </ul>
