@@ -1,3 +1,8 @@
+1999-09-10  Hippo
+
+	* modules.html,mod_initialization.html: added section on how to code
+	colorsets
+
 1999-09-08  Dan Espen  <dane@mk.telcordia.com>
 
 	* Moved fvwm-cats into fvwm-web.  Moved the cats changelog here too.
